Force Layout every time a HoverHightlightView is updated.

When an item in the system tray network list goes from connecting to disconnected without a Layout 
of the parent view being triggered, it isn't rendered correctly. This is probably due to the fact 
that the "connecting" view has a sub_text_label and the "disconnected" view does not. The problem 
is solved when a Layout of the view is performed every time UpdateViewForNetwork is called.

Bug: 750322, 672263
Change-Id: I785b2874db583a6d28aaeefed86d813141f6e79a
Reviewed-on: https://chromium-review.googlesource.com/609216
Reviewed-by: Terry Anderson <tdanderson@chromium.org>
Reviewed-by: Kyle Horimoto <khorimoto@chromium.org>
Commit-Queue: Leslie Watkins <lesliewatkins@chromium.org>
Cr-Commit-Position: refs/heads/master@{#493446}
Former-commit-id: 82d95b25401b8b33f3f2df41948fb4c63dd7df32